remove scrollbar and fix animation

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -15,5 +15,16 @@ html[lang="ku"] {
   font-family: "rabar", sans-serif;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 @tailwind components;
 @tailwind utilities;
